--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ THEN the current day is displayed at the top of the calendar (DONE)
 WHEN I scroll down
 THEN I am presented with time blocks for standard business hours of 9am to 5pm (DONE)
 WHEN I view the time blocks for that day
-THEN each time block is color-coded to indicate whether it is in the past, present, or future (3)
+THEN each time block is color-coded to indicate whether it is in the past, present, or future (3 ? figure out why its not working)
 WHEN I click into a time block
 THEN I can enter an event (4)
 WHEN I click the save button for that time block
