--- a/index.html
+++ b/index.html
@@ -31,15 +31,6 @@
       <p id="currentDay" class="lead"></p>
     </header>
     <div class="container-fluid px-5">
-      <!-- Use class for "past", "present", and "future" to apply styles to the
-        time-block divs accordingly. The javascript will need to do this by
-        adding/removing these classes on each div by comparing the hour in the
-        id to the current hour. The html provided below is meant to be an example
-        demonstrating how the css provided can be leveraged to create the
-        desired layout and colors. The html below should be removed or updated
-        in the finished product. Remember to delete this comment once the
-        code is implemented.
-        -->
 
       <!-- Example of a past time block. The "past" class adds a gray background color. -->
       <div id="hour-9" class="row time-block past">
@@ -147,7 +138,7 @@ THEN each time block is color-coded to indicate whether it is in the past, prese
 WHEN I click into a time block
 THEN I can enter an event (DONE)
 WHEN I click the save button for that time block
-THEN the text for that event is saved in local storage (5)
+THEN the text for that event is saved in local storage (DONE)
 WHEN I refresh the page
-THEN the saved events persist (6)
+THEN the saved events persist (DONE)
 -->
